force-app/main/default/objects/Opportunity/fields/Drug_of_Choice__c.field-meta.xml
<CustomField>
    <fullName>Drug_of_Choice__c</fullName>
    <label>Drug of Choice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Adderall</fullName>
            </value>
            <value>
                <fullName>Benzos</fullName>
            </value>
            <value>
                <fullName>Cocaine</fullName>
            </value>
            <value>
                <fullName>Crack</fullName>
            </value>
            <value>
                <fullName>Heroin</fullName>
            </value>
            <value>
                <fullName>Marijuana</fullName>
            </value>
            <value>
                <fullName>MDMA</fullName>
            </value>
            <value>
                <fullName>Meth</fullName>
            </value>
            <value>
                <fullName>Opiates</fullName>
            </value>
            <value>
                <fullName>Psychedelics</fullName>
            </value>
            <value>
                <fullName>Synthetics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>