force-app/main/default/objects/Opportunity/fields/Emergency_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_First_Name__c</fullName>
    <label>Emergency First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>