force-app/main/default/objects/Opportunity/fields/Estimated_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Discharge_Date__c</fullName>
    <label>Estimated Discharge Date</label>
    <type>Date</type>
</CustomField>