force-app/main/default/objects/Opportunity/fields/Face_to_Face__c.field-meta.xml
<CustomField>
    <fullName>Face_to_Face__c</fullName>
    <label>Face to Face</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>60-90 minutes</fullName>
            </value>
            <value>
                <fullName>90 minutes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>