force-app/main/default/objects/Opportunity/fields/Facility_Approved__c.field-meta.xml
<CustomField>
    <fullName>Facility_Approved__c</fullName>
    <label>Admitted Treatment Service Facility</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Anticipated_Realm__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hanley Center</fullName>
            </value>
            <value>
                <fullName>Hanley Center Counseling</fullName>
            </value>
            <value>
                <fullName>Hanley Center - Mental Health</fullName>
            </value>
            <value>
                <fullName>Hanley Center - Mental Health Outpatient</fullName>
            </value>
            <value>
                <fullName>HeadWaters</fullName>
            </value>
            <value>
                <fullName>Hannah’s House</fullName>
            </value>
            <value>
                <fullName>Origins Recovery Center</fullName>
            </value>
            <value>
                <fullName>Origins Counseling Mental Health Services</fullName>
            </value>
            <value>
                <fullName>Restored Path Detox</fullName>
            </value>
            <value>
                <fullName>Origins Counseling - Harlingen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>