force-app/main/default/objects/Opportunity/fields/Facility_requested__c.field-meta.xml
<CustomField>
    <fullName>Facility_requested__c</fullName>
    <label>Treatment Service Facility Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hanley Center</fullName>
            </value>
            <value>
                <fullName>Hanley Center - Mental Health</fullName>
            </value>
            <value>
                <fullName>Hanley Center Counseling</fullName>
            </value>
            <value>
                <fullName>Hannah&apos;s House</fullName>
                <label>Hannah’s House</label>
            </value>
            <value>
                <fullName>HeadWaters</fullName>
            </value>
            <value>
                <fullName>Origins Counseling</fullName>
            </value>
            <value>
                <fullName>Origins Counseling - Harlingen</fullName>
            </value>
            <value>
                <fullName>Origins Counseling - Mental Health</fullName>
            </value>
            <value>
                <fullName>Origins Recovery Center</fullName>
            </value>
            <value>
                <fullName>Origins Recovery of Texas Counseling</fullName>
            </value>
            <value>
                <fullName>Windhaven House</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>