force-app/main/default/objects/Opportunity/fields/Full_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Full_Scholarship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Scholarship</label>
    <type>Checkbox</type>
</CustomField>