force-app/main/default/objects/Opportunity/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Medical Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>