force-app/main/default/objects/Opportunity/fields/IBP__IfbyphoneCallId__c.field-meta.xml
<CustomField>
    <fullName>IBP__IfbyphoneCallId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DialogTech Call</label>
    <referenceTo>IBP__Ifbyphone_Call__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>