force-app/main/default/objects/Opportunity/fields/Identified__c.field-meta.xml
<CustomField>
    <fullName>Identified__c</fullName>
    <inlineHelpText>You can&apos;t edit the patient’s &quot;Gender&quot; on Opportunity. Please make changes on the Account.</inlineHelpText>
    <label>Identified Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Declined to Specify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>