force-app/main/default/objects/Opportunity/fields/Insurance_Provider2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider2__c</fullName>
    <label>Insurance Provider2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>