force-app/main/default/objects/Opportunity/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>