force-app/main/default/objects/Opportunity/fields/Invoca_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Invoca_Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoca Call Log</label>
    <referenceTo>INVOCA_FOR_SF__Invoca_Call_Log__c</referenceTo>
    <relationshipLabel>Opportunities (Invoca Call Log)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>