force-app/main/default/objects/Opportunity/fields/INVOCA_FOR_SF__Invoca_Dummy_Update__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__Invoca_Dummy_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to check Batch Updates</description>
    <label>Invoca Dummy Update</label>
    <type>Checkbox</type>
</CustomField>