force-app/main/default/objects/Opportunity/fields/INVOCA_FOR_SF__Phone__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>