force-app/main/default/objects/Opportunity/fields/INVOCA_FOR_SF__Stripped_Phone__c.field-meta.xml
<CustomField>
    <fullName>INVOCA_FOR_SF__Stripped_Phone__c</fullName>
    <label>Stripped Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>