force-app/main/default/objects/Opportunity/fields/Invoca_Phone_Label__c.field-meta.xml
<CustomField>
    <fullName>Invoca_Phone_Label__c</fullName>
    <label>Invoca Phone Label</label>
    <type>TextArea</type>
</CustomField>