force-app/main/default/objects/Opportunity/fields/Is_Converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_from_Lead__c</fullName>
    <label>Is Converted from Lead?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>