force-app/main/default/objects/Opportunity/fields/isConverted__c.field-meta.xml
<CustomField>
    <fullName>isConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConverted</label>
    <type>Checkbox</type>
</CustomField>