force-app/main/default/objects/Opportunity/fields/IsOld__c.field-meta.xml
<CustomField>
    <fullName>IsOld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOld</label>
    <type>Checkbox</type>
</CustomField>