force-app/main/default/objects/Opportunity/fields/lastModifiedDatefinal__c.field-meta.xml
<CustomField>
    <fullName>lastModifiedDatefinal__c</fullName>
    <formula>today() -  DATEVALUE(LastModifiedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lastModifiedDatefinal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>