force-app/main/default/objects/Opportunity/fields/Legal_Issues__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues__c</fullName>
    <label>Legal Issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>