force-app/main/default/objects/Opportunity/fields/LOA_did_not_readmit__c.field-meta.xml
<CustomField>
    <fullName>LOA_did_not_readmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA did not readmit</label>
    <type>Checkbox</type>
</CustomField>