force-app/main/default/objects/Opportunity/fields/LOC_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>LOC_for_Referral__c</fullName>
    <label>LOC for Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detox</fullName>
            </value>
            <value>
                <fullName>PHP/Day-Night</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>