force-app/main/default/objects/Opportunity/fields/LOS__c.field-meta.xml
<CustomField>
    <fullName>LOS__c</fullName>
    <formula>(Discharge_Date__c - Admitted_Date__c) + Previous_LOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>