force-app/main/default/objects/Opportunity/fields/MBC_ID__c.field-meta.xml
<CustomField>
    <fullName>MBC_ID__c</fullName>
    <label>MBC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>