force-app/main/default/objects/Opportunity/fields/Medical_Insurance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance_Phone__c</fullName>
    <label>Medical Insurance Phone</label>
    <type>Phone</type>
</CustomField>