force-app/main/default/objects/Opportunity/fields/Medical_Issues__c.field-meta.xml
<CustomField>
    <fullName>Medical_Issues__c</fullName>
    <label>Medical Issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>