force-app/main/default/objects/Opportunity/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Medical Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>