force-app/main/default/objects/Opportunity/fields/MH_Issues__c.field-meta.xml
<CustomField>
    <fullName>MH_Issues__c</fullName>
    <label>MH Issues</label>
    <type>TextArea</type>
</CustomField>