force-app/main/default/objects/Opportunity/fields/MRI__c.field-meta.xml
<CustomField>
    <fullName>MRI__c</fullName>
    <formula>IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins Behavioral HealthCare of Florida, LLC&apos;),Sunwave_MRI_OBHFL__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins Recovery of Texas, LLC&apos;),Sunwave_MRI_ORT__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins Counseling Dallas&apos;),Sunwave_MRI_OC_Dallas__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins Dallas Transitional Living&apos;),Sunwave_MRI_Dallas_TL__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins West Palm Beach Transitional Living&apos;),Sunwave_MRI_OBHFL_TL__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Origins Counseling Mental Health Services&apos;), Sunwave_MRI_OC_MH_Dallas__c, 
IF(ISPICKVAL(Anticipated_Realm__c , &apos;Restored Path Detox&apos;),Sunwave_MRI_RPD__c,
&apos;&apos;)))))))</formula>
    <label>MRI</label>
    <type>Text</type>
</CustomField>