force-app/main/default/objects/Opportunity/fields/Number_of_Days_in_PHP__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_in_PHP__c</fullName>
    <label>Number of Days in PHP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>