force-app/main/default/objects/Opportunity/fields/Number_of_Days_in_RES__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_in_RES__c</fullName>
    <label>Number of Days in RES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>