force-app/main/default/objects/Opportunity/fields/Number_of_Days_on_LOA__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_on_LOA__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days on LOA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>