force-app/main/default/objects/Opportunity/fields/OCC_Programs__c.field-meta.xml
<CustomField>
    <fullName>OCC_Programs__c</fullName>
    <formula>CASE(Program__c,&quot;Discover Assessments - Basic&quot;, &quot;1 hour&quot;, &quot;Discover Assessments - Standard&quot;, &quot;1-2 hours&quot;, &quot;Discover Assessments - Comprehensive&quot;, &quot;2-3 hours&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCC Programs</label>
    <type>Text</type>
</CustomField>