force-app/main/default/objects/Opportunity/fields/Opt_Out_of_Alumni_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Alumni_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Alumni Surveys</label>
    <type>Checkbox</type>
</CustomField>