force-app/main/default/objects/Opportunity/fields/Owner_primary_referent__c.field-meta.xml
<CustomField>
    <fullName>Owner_primary_referent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Referent Organization Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>