force-app/main/default/objects/Opportunity/fields/Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Id__c</fullName>
    <label>Patient Id (SW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>