force-app/main/default/objects/Opportunity/fields/Payment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Payment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Receipt must be in notes section</inlineHelpText>
    <label>Payment Complete</label>
    <type>Checkbox</type>
</CustomField>