force-app/main/default/objects/Opportunity/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>