force-app/main/default/objects/Opportunity/fields/Previous_LOS__c.field-meta.xml
<CustomField>
    <fullName>Previous_LOS__c</fullName>
    <label>Previous LOS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>