force-app/main/default/objects/Opportunity/fields/Primary_Drug_of_Choice__c.field-meta.xml
<CustomField>
    <fullName>Primary_Drug_of_Choice__c</fullName>
    <label>Primary Drug of Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Hallucinogen</fullName>
            </value>
            <value>
                <fullName>Inhalant</fullName>
            </value>
            <value>
                <fullName>Opioid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sedative / Hypnotic / Anxiolytic</fullName>
            </value>
            <value>
                <fullName>Stimulant</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
            <value>
                <fullName>Adderall</fullName>
                <isActive>false</isActive>
                <label>Adderall</label>
            </value>
            <value>
                <fullName>Benzos</fullName>
                <isActive>false</isActive>
                <label>Benzos</label>
            </value>
            <value>
                <fullName>Cocaine</fullName>
                <isActive>false</isActive>
                <label>Cocaine</label>
            </value>
            <value>
                <fullName>Crack</fullName>
                <isActive>false</isActive>
                <label>Crack</label>
            </value>
            <value>
                <fullName>Heroin</fullName>
                <isActive>false</isActive>
                <label>Heroin</label>
            </value>
            <value>
                <fullName>MDMA</fullName>
                <isActive>false</isActive>
                <label>MDMA</label>
            </value>
            <value>
                <fullName>Marijuana</fullName>
                <isActive>false</isActive>
                <label>Marijuana</label>
            </value>
            <value>
                <fullName>Meth</fullName>
                <isActive>false</isActive>
                <label>Meth</label>
            </value>
            <value>
                <fullName>Opiates</fullName>
                <isActive>false</isActive>
                <label>Opiates</label>
            </value>
            <value>
                <fullName>Psychedelics</fullName>
                <isActive>false</isActive>
                <label>Psychedelics</label>
            </value>
            <value>
                <fullName>Synthetics</fullName>
                <isActive>false</isActive>
                <label>Synthetics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>