force-app/main/default/objects/Opportunity/fields/Primary_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_No__c</fullName>
    <label>Primary Phone No</label>
    <type>Phone</type>
</CustomField>