force-app/main/default/objects/Opportunity/fields/Primary_Phone_No_Abr__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_No_Abr__c</fullName>
    <formula>IF(LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Primary_Phone_NoX__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;),1)=&quot;1&quot;,RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Primary_Phone_NoX__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;),LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Primary_Phone_NoX__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;))-1),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Primary_Phone_NoX__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+1&quot;, &quot;&quot;))</formula>
    <label>Primary Phone No Abr</label>
    <type>Text</type>
</CustomField>