force-app/main/default/objects/Opportunity/fields/Primary_Phone_NoX__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_NoX__c</fullName>
    <description>Used by Origins</description>
    <label>Primary Phone No</label>
    <type>Phone</type>
</CustomField>