force-app/main/default/objects/Opportunity/fields/Primary_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Policy_Type__c</fullName>
    <label>Primary Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPO OON</fullName>
            </value>
            <value>
                <fullName>PPO INN</fullName>
            </value>
            <value>
                <fullName>HMO INN</fullName>
            </value>
            <value>
                <fullName>EPO INN</fullName>
            </value>
            <value>
                <fullName>EPO OON</fullName>
            </value>
            <value>
                <fullName>POS OON</fullName>
            </value>
            <value>
                <fullName>POS INN</fullName>
            </value>
            <value>
                <fullName>Private Pay</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Contracted Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>