force-app/main/default/objects/Opportunity/fields/Primary_Referent_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Address__c</fullName>
    <label>Primary Referent Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>