force-app/main/default/objects/Opportunity/fields/Primary_Referent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Mobile__c</fullName>
    <formula>Referent__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Referent Mobile</label>
    <type>Text</type>
</CustomField>