force-app/main/default/objects/Opportunity/fields/Primary_Referent_Organisation_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Organisation_City__c</fullName>
    <label>Primary Referent Organisation City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>