force-app/main/default/objects/Opportunity/fields/Primary_Referent_Organisation_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Organisation_State__c</fullName>
    <label>Primary Referent Organisation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>