force-app/main/default/objects/Opportunity/fields/Primary_Referent_Organization_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Organization_Email__c</fullName>
    <label>Primary Referent Organization Email</label>
    <type>Email</type>
</CustomField>