force-app/main/default/objects/Opportunity/fields/Primary_Referent_Organization_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Organization_Phone__c</fullName>
    <label>Primary Referent Organization Phone</label>
    <type>Phone</type>
</CustomField>