force-app/main/default/objects/Opportunity/fields/Primary_Referent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Referent Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>