force-app/main/default/objects/Opportunity/fields/Primary_Referent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Phone__c</fullName>
    <label>Primary Referent Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>