force-app/main/default/objects/Opportunity/fields/Primary_Referent_Relationship_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referent_Relationship_to_Patient__c</fullName>
    <label>Primary Referent Relationship to Patient</label>
    <type>TextArea</type>
</CustomField>